kubernetes/ingress-nginx-controller/kubernetes-api-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-api
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "e7ac5e75-7d92-436e-a8b4-f254aeb7c0e4.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: who.zeinfahrozi.club
      http:
        paths:
          - path: /kubernetes
            pathType: Exact
            backend:
              service:
                name: kubernetes
                port:
                  number: 443
