kubernetes/ingress-nginx-controller/who-am-i-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "e7ac5e75-7d92-436e-a8b4-f254aeb7c0e4.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: who.zeinfahrozi.club
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami-1
                port:
                  number: 80
          - path: /whoami1
            pathType: Exact
            backend:
              service:
                name: whoami-1
                port:
                  number: 80
          - path: /whoami2
            pathType: Exact
            backend:
              service:
                name: whoami-2
                port:
                  number: 80
